// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next - Import Meta > Next - Import Meta (pass) > "use strict"; ({m() { while (0) { import.meta } }}) 1`] = `
{
  "body": [
    {
      "directive": "use strict",
      "expression": {
        "type": "Literal",
        "value": "use strict",
      },
      "type": "ExpressionStatement",
    },
    {
      "expression": {
        "properties": [
          {
            "computed": false,
            "key": {
              "name": "m",
              "type": "Identifier",
            },
            "kind": "init",
            "method": true,
            "shorthand": false,
            "type": "Property",
            "value": {
              "async": false,
              "body": {
                "body": [
                  {
                    "body": {
                      "body": [
                        {
                          "expression": {
                            "meta": {
                              "name": "import",
                              "type": "Identifier",
                            },
                            "property": {
                              "name": "meta",
                              "type": "Identifier",
                            },
                            "type": "MetaProperty",
                          },
                          "type": "ExpressionStatement",
                        },
                      ],
                      "type": "BlockStatement",
                    },
                    "test": {
                      "type": "Literal",
                      "value": 0,
                    },
                    "type": "WhileStatement",
                  },
                ],
                "type": "BlockStatement",
              },
              "generator": false,
              "id": null,
              "params": [],
              "type": "FunctionExpression",
            },
          },
        ],
        "type": "ObjectExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > () => { import.meta } 1`] = `
{
  "body": [
    {
      "expression": {
        "async": false,
        "body": {
          "body": [
            {
              "expression": {
                "meta": {
                  "name": "import",
                  "type": "Identifier",
                },
                "property": {
                  "name": "meta",
                  "type": "Identifier",
                },
                "type": "MetaProperty",
              },
              "type": "ExpressionStatement",
            },
          ],
          "type": "BlockStatement",
        },
        "expression": false,
        "generator": false,
        "params": [],
        "type": "ArrowFunctionExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > ({m() { import.meta.url}}) 1`] = `
{
  "body": [
    {
      "expression": {
        "properties": [
          {
            "computed": false,
            "key": {
              "name": "m",
              "type": "Identifier",
            },
            "kind": "init",
            "method": true,
            "shorthand": false,
            "type": "Property",
            "value": {
              "async": false,
              "body": {
                "body": [
                  {
                    "expression": {
                      "computed": false,
                      "object": {
                        "meta": {
                          "name": "import",
                          "type": "Identifier",
                        },
                        "property": {
                          "name": "meta",
                          "type": "Identifier",
                        },
                        "type": "MetaProperty",
                      },
                      "optional": false,
                      "property": {
                        "name": "url",
                        "type": "Identifier",
                      },
                      "type": "MemberExpression",
                    },
                    "type": "ExpressionStatement",
                  },
                ],
                "type": "BlockStatement",
              },
              "generator": false,
              "id": null,
              "params": [],
              "type": "FunctionExpression",
            },
          },
        ],
        "type": "ObjectExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > const size = import.meta.scriptElement.dataset.size || 300; 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "size",
            "type": "Identifier",
          },
          "init": {
            "left": {
              "computed": false,
              "object": {
                "computed": false,
                "object": {
                  "computed": false,
                  "object": {
                    "meta": {
                      "name": "import",
                      "type": "Identifier",
                    },
                    "property": {
                      "name": "meta",
                      "type": "Identifier",
                    },
                    "type": "MetaProperty",
                  },
                  "optional": false,
                  "property": {
                    "name": "scriptElement",
                    "type": "Identifier",
                  },
                  "type": "MemberExpression",
                },
                "optional": false,
                "property": {
                  "name": "dataset",
                  "type": "Identifier",
                },
                "type": "MemberExpression",
              },
              "optional": false,
              "property": {
                "name": "size",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            "operator": "||",
            "right": {
              "type": "Literal",
              "value": 300,
            },
            "type": "LogicalExpression",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "const",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > delete import.meta 1`] = `
{
  "body": [
    {
      "expression": {
        "argument": {
          "meta": {
            "name": "import",
            "type": "Identifier",
          },
          "property": {
            "name": "meta",
            "type": "Identifier",
          },
          "type": "MetaProperty",
        },
        "operator": "delete",
        "prefix": true,
        "type": "UnaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > do { import.meta } while (0) 1`] = `
{
  "body": [
    {
      "body": {
        "body": [
          {
            "expression": {
              "meta": {
                "name": "import",
                "type": "Identifier",
              },
              "property": {
                "name": "meta",
                "type": "Identifier",
              },
              "type": "MetaProperty",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "test": {
        "type": "Literal",
        "value": 0,
      },
      "type": "DoWhileStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > if (1) { import.meta } 1`] = `
{
  "body": [
    {
      "alternate": null,
      "consequent": {
        "body": [
          {
            "expression": {
              "meta": {
                "name": "import",
                "type": "Identifier",
              },
              "property": {
                "name": "meta",
                "type": "Identifier",
              },
              "type": "MetaProperty",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "test": {
        "type": "Literal",
        "value": 1,
      },
      "type": "IfStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > import.meta 1`] = `
{
  "body": [
    {
      "end": 11,
      "expression": {
        "end": 11,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "meta": {
          "end": 6,
          "loc": {
            "end": {
              "column": 6,
              "line": 1,
            },
            "start": {
              "column": 6,
              "line": 1,
            },
          },
          "name": "import",
          "range": [
            6,
            6,
          ],
          "start": 6,
          "type": "Identifier",
        },
        "property": {
          "end": 11,
          "loc": {
            "end": {
              "column": 11,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "name": "meta",
          "range": [
            7,
            11,
          ],
          "start": 7,
          "type": "Identifier",
        },
        "range": [
          6,
          11,
        ],
        "start": 6,
        "type": "MetaProperty",
      },
      "loc": {
        "end": {
          "column": 11,
          "line": 1,
        },
        "start": {
          "column": 6,
          "line": 1,
        },
      },
      "range": [
        6,
        11,
      ],
      "start": 6,
      "type": "ExpressionStatement",
    },
  ],
  "end": 11,
  "loc": {
    "end": {
      "column": 11,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    11,
  ],
  "sourceType": "module",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > import.meta() 1`] = `
{
  "body": [
    {
      "expression": {
        "arguments": [],
        "callee": {
          "meta": {
            "name": "import",
            "type": "Identifier",
          },
          "property": {
            "name": "meta",
            "type": "Identifier",
          },
          "type": "MetaProperty",
        },
        "optional": false,
        "type": "CallExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > import.meta.resolve('something') 1`] = `
{
  "body": [
    {
      "expression": {
        "arguments": [
          {
            "type": "Literal",
            "value": "something",
          },
        ],
        "callee": {
          "computed": false,
          "object": {
            "meta": {
              "name": "import",
              "type": "Identifier",
            },
            "property": {
              "name": "meta",
              "type": "Identifier",
            },
            "type": "MetaProperty",
          },
          "optional": false,
          "property": {
            "name": "resolve",
            "type": "Identifier",
          },
          "type": "MemberExpression",
        },
        "optional": false,
        "type": "CallExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > import.meta.url 1`] = `
{
  "body": [
    {
      "end": 15,
      "expression": {
        "computed": false,
        "end": 15,
        "loc": {
          "end": {
            "column": 15,
            "line": 1,
          },
          "start": {
            "column": 6,
            "line": 1,
          },
        },
        "object": {
          "end": 11,
          "loc": {
            "end": {
              "column": 11,
              "line": 1,
            },
            "start": {
              "column": 6,
              "line": 1,
            },
          },
          "meta": {
            "end": 6,
            "loc": {
              "end": {
                "column": 6,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "name": "import",
            "range": [
              6,
              6,
            ],
            "start": 6,
            "type": "Identifier",
          },
          "property": {
            "end": 11,
            "loc": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 7,
                "line": 1,
              },
            },
            "name": "meta",
            "range": [
              7,
              11,
            ],
            "start": 7,
            "type": "Identifier",
          },
          "range": [
            6,
            11,
          ],
          "start": 6,
          "type": "MetaProperty",
        },
        "optional": false,
        "property": {
          "end": 15,
          "loc": {
            "end": {
              "column": 15,
              "line": 1,
            },
            "start": {
              "column": 12,
              "line": 1,
            },
          },
          "name": "url",
          "range": [
            12,
            15,
          ],
          "start": 12,
          "type": "Identifier",
        },
        "range": [
          6,
          15,
        ],
        "start": 6,
        "type": "MemberExpression",
      },
      "loc": {
        "end": {
          "column": 15,
          "line": 1,
        },
        "start": {
          "column": 6,
          "line": 1,
        },
      },
      "range": [
        6,
        15,
      ],
      "start": 6,
      "type": "ExpressionStatement",
    },
  ],
  "end": 15,
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    15,
  ],
  "sourceType": "module",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > import.meta[0] 1`] = `
{
  "body": [
    {
      "expression": {
        "computed": true,
        "object": {
          "meta": {
            "name": "import",
            "type": "Identifier",
          },
          "property": {
            "name": "meta",
            "type": "Identifier",
          },
          "type": "MetaProperty",
        },
        "optional": false,
        "property": {
          "type": "Literal",
          "value": 0,
        },
        "type": "MemberExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > t = [...import.meta] 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "t",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "elements": [
            {
              "argument": {
                "meta": {
                  "name": "import",
                  "type": "Identifier",
                },
                "property": {
                  "name": "meta",
                  "type": "Identifier",
                },
                "type": "MetaProperty",
              },
              "type": "SpreadElement",
            },
          ],
          "type": "ArrayExpression",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > var f = function() {import.meta.couldBeMutable = true} 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "name": "f",
            "type": "Identifier",
          },
          "init": {
            "async": false,
            "body": {
              "body": [
                {
                  "expression": {
                    "left": {
                      "computed": false,
                      "object": {
                        "meta": {
                          "name": "import",
                          "type": "Identifier",
                        },
                        "property": {
                          "name": "meta",
                          "type": "Identifier",
                        },
                        "type": "MetaProperty",
                      },
                      "optional": false,
                      "property": {
                        "name": "couldBeMutable",
                        "type": "Identifier",
                      },
                      "type": "MemberExpression",
                    },
                    "operator": "=",
                    "right": {
                      "type": "Literal",
                      "value": true,
                    },
                    "type": "AssignmentExpression",
                  },
                  "type": "ExpressionStatement",
                },
              ],
              "type": "BlockStatement",
            },
            "generator": false,
            "id": null,
            "params": [],
            "type": "FunctionExpression",
          },
          "type": "VariableDeclarator",
        },
      ],
      "kind": "var",
      "type": "VariableDeclaration",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > x = 
import.meta 1`] = `
{
  "body": [
    {
      "end": 16,
      "expression": {
        "end": 16,
        "left": {
          "end": 1,
          "loc": {
            "end": {
              "column": 1,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "name": "x",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "loc": {
          "end": {
            "column": 11,
            "line": 2,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "operator": "=",
        "range": [
          0,
          16,
        ],
        "right": {
          "end": 16,
          "loc": {
            "end": {
              "column": 11,
              "line": 2,
            },
            "start": {
              "column": 6,
              "line": 2,
            },
          },
          "meta": {
            "end": 11,
            "loc": {
              "end": {
                "column": 6,
                "line": 2,
              },
              "start": {
                "column": 0,
                "line": 2,
              },
            },
            "name": "import",
            "range": [
              5,
              11,
            ],
            "start": 5,
            "type": "Identifier",
          },
          "property": {
            "end": 16,
            "loc": {
              "end": {
                "column": 11,
                "line": 2,
              },
              "start": {
                "column": 7,
                "line": 2,
              },
            },
            "name": "meta",
            "range": [
              12,
              16,
            ],
            "start": 12,
            "type": "Identifier",
          },
          "range": [
            11,
            16,
          ],
          "start": 11,
          "type": "MetaProperty",
        },
        "start": 0,
        "type": "AssignmentExpression",
      },
      "loc": {
        "end": {
          "column": 11,
          "line": 2,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        16,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 16,
  "loc": {
    "end": {
      "column": 11,
      "line": 2,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    16,
  ],
  "sourceType": "module",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > x = 
import.meta.url 1`] = `
{
  "body": [
    {
      "end": 20,
      "expression": {
        "end": 20,
        "left": {
          "end": 1,
          "loc": {
            "end": {
              "column": 1,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "name": "x",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "loc": {
          "end": {
            "column": 15,
            "line": 2,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "operator": "=",
        "range": [
          0,
          20,
        ],
        "right": {
          "computed": false,
          "end": 20,
          "loc": {
            "end": {
              "column": 15,
              "line": 2,
            },
            "start": {
              "column": 0,
              "line": 2,
            },
          },
          "object": {
            "end": 16,
            "loc": {
              "end": {
                "column": 11,
                "line": 2,
              },
              "start": {
                "column": 6,
                "line": 2,
              },
            },
            "meta": {
              "end": 11,
              "loc": {
                "end": {
                  "column": 6,
                  "line": 2,
                },
                "start": {
                  "column": 0,
                  "line": 2,
                },
              },
              "name": "import",
              "range": [
                5,
                11,
              ],
              "start": 5,
              "type": "Identifier",
            },
            "property": {
              "end": 16,
              "loc": {
                "end": {
                  "column": 11,
                  "line": 2,
                },
                "start": {
                  "column": 7,
                  "line": 2,
                },
              },
              "name": "meta",
              "range": [
                12,
                16,
              ],
              "start": 12,
              "type": "Identifier",
            },
            "range": [
              11,
              16,
            ],
            "start": 11,
            "type": "MetaProperty",
          },
          "optional": false,
          "property": {
            "end": 20,
            "loc": {
              "end": {
                "column": 15,
                "line": 2,
              },
              "start": {
                "column": 12,
                "line": 2,
              },
            },
            "name": "url",
            "range": [
              17,
              20,
            ],
            "start": 17,
            "type": "Identifier",
          },
          "range": [
            5,
            20,
          ],
          "start": 5,
          "type": "MemberExpression",
        },
        "start": 0,
        "type": "AssignmentExpression",
      },
      "loc": {
        "end": {
          "column": 15,
          "line": 2,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        20,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 20,
  "loc": {
    "end": {
      "column": 15,
      "line": 2,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    20,
  ],
  "sourceType": "module",
  "start": 0,
  "type": "Program",
}
`;

exports[`Next - Import Meta > Next - Import Meta (pass) > x = import.meta 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "x",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "meta": {
            "name": "import",
            "type": "Identifier",
          },
          "property": {
            "name": "meta",
            "type": "Identifier",
          },
          "type": "MetaProperty",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "module",
  "type": "Program",
}
`;
